# ajvm

./: CMakeLists.txt  trace.c  wvm.c
test/: Hw.java
